[gd_scene load_steps=9 format=3 uid="uid://d2asrwmqhv1xq"]

[ext_resource type="Texture2D" uid="uid://dgf0qmuek5s3n" path="res://assets/Custom Assets/Crafting_Menu.png" id="1_4gd6l"]
[ext_resource type="Script" path="res://scripts/BoatCraftingMenu.gd" id="1_lrg31"]
[ext_resource type="PackedScene" uid="uid://b316w28m6wclr" path="res://scenes/inventory/inventory_item_display.tscn" id="2_5brl4"]
[ext_resource type="Texture2D" uid="uid://1wjucen64fuf" path="res://assets/Custom Assets/Craft_Item_Button.png" id="3_0x7em"]
[ext_resource type="Texture2D" uid="uid://da21oaluswjm7" path="res://assets/Custom Assets/Craft_Item_Button_Pressed.png" id="4_6d2ue"]
[ext_resource type="Texture2D" uid="uid://dvlakvh1lotyg" path="res://assets/Custom Assets/Craft_Item_Button_Hover.png" id="5_qp2xw"]
[ext_resource type="Texture2D" uid="uid://c2dq54w35277r" path="res://assets/Custom Assets/Craft_Item_Button_Disabled.png" id="6_pdjcg"]
[ext_resource type="FontFile" uid="uid://cwp6uh1c8a8yg" path="res://assets/Fonts/managore-m5x7.ttf" id="7_henxh"]

[node name="BoatCraftingMenu" type="CanvasLayer"]
layer = 30
script = ExtResource("1_lrg31")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -131.0
offset_right = -126.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_4gd6l")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/h_separation = 15
columns = 3

[node name="ItemDisplay" parent="TextureRect/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("2_5brl4")]
layout_mode = 2
size_flags_horizontal = 4
item_quantity = "80"
item_name = "Wood"

[node name="ItemDisplay2" parent="TextureRect/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("2_5brl4")]
layout_mode = 2
item_quantity = "24"
item_name = "Crystal"

[node name="ItemDisplay3" parent="TextureRect/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("2_5brl4")]
layout_mode = 2
item_quantity = "12"
item_name = "Stone"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EscapeButton" type="TextureButton" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource("3_0x7em")
texture_pressed = ExtResource("4_6d2ue")
texture_hover = ExtResource("5_qp2xw")
texture_disabled = ExtResource("6_pdjcg")

[node name="Label" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/EscapeButton"]
layout_mode = 1
offset_left = 4.75
offset_top = 1.25
offset_right = 41.75
offset_bottom = 14.25
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_henxh")
text = "Escape!"

[node name="CloseButton" type="TextureButton" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_0x7em")
texture_pressed = ExtResource("4_6d2ue")
texture_hover = ExtResource("5_qp2xw")
texture_disabled = ExtResource("6_pdjcg")

[node name="Label" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/CloseButton"]
layout_mode = 1
offset_left = 6.75
offset_top = 0.75
offset_right = 43.75
offset_bottom = 13.75
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_henxh")
text = "Close"

[node name="Label" type="Label" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 22.5
offset_top = 3.0
offset_right = 105.5
offset_bottom = 26.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("7_henxh")
text = "Repair The Boat"

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/EscapeButton" to="." method="_on_escape_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
